==> apache/nuttx/arch/arm/src/lpc43xx/lpc43_allocateheap.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <assert.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/board.h>
#include <nuttx/kmalloc.h>
#include <nuttx/userspace.h>
#include <arch/board/board.h>
#include "mpu.h"
#include "chip.h"
#include "arm_arch.h"
#include "arm_internal.h"
#include "lpc43_mpuinit.h"
#include "lpc43_emacram.h"
#include "lpc43_usbram.h"
#  define MM_USE_LOCSRAM_BANK0 0
#    define MM_USE_LOCSRAM_BANK1 1
#  define MM_USE_LOCSRAM_BANK1 0
#  define MM_USE_AHBSRAM_BANK0 1
#  define MM_USE_AHBSRAM_BANK1 1
#define MM_DMAREGION_BASE  LPC43_AHBSRAM_BANK2_BASE
#define MM_DMAREGION_SIZE  LPC43_AHBSRAM_BANK2_SIZE
#  define MM_USE_AHBSRAM_BANK2 1
#  define MM_DMAHEAP_BASE MM_DMAREGION_BASE /* For now... use it all */
#  define MM_DMAHEAP_SIZE MM_DMAREGION_SIZE
#  define CONFIG_LPC43_EXTSDRAM0_SIZE 0
#  define CONFIG_LPC43_EXTSDRAM1_SIZE 0
#  define CONFIG_LPC43_EXTSDRAM2_SIZE 0
#  define CONFIG_LPC43_EXTSDRAM3_SIZE 0
#  define MM_USE_EXTSDRAM0 1
#  define MM_EXTSDRAM0_REGION LPC43_DYCS0_BASE
#  define MM_EXTSDRAM0_SIZE   CONFIG_LPC43_EXTSDRAM0_SIZE
#  define MM_USE_EXTSDRAM1 1
#  define MM_EXTSDRAM1_REGION LPC43_DYCS1_BASE
#  define MM_EXTSDRAM1_SIZE   CONFIG_LPC43_EXTSDRAM1_SIZE
#  define MM_USE_EXTSDRAM2 1
#  define MM_EXTSDRAM2_REGION LPC43_DYCS2_BASE
#  define MM_EXTSDRAM2_SIZE   CONFIG_LPC43_EXTSDRAM2_SIZE
#  define HAVE_EXTSDRAM3_REGION 1
#  define MM_EXTSDRAM3_REGION LPC43_DYCS3_BASE

void up_allocate_heap(FAR void **heap_start, size_t *heap_size)
{
#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Get the unaligned size and position of the user-space heap.
   * This heap begins after the user-space .bss section at an offset
   * of CONFIG_MM_KERNEL_HEAPSIZE (subject to alignment).
   */

  uintptr_t ubase = (uintptr_t)USERSPACE->us_bssend + CONFIG_MM_KERNEL_HEAPSIZE;
  size_t    usize = CONFIG_RAM_END - ubase;
  int       log2;

  DEBUGASSERT(ubase < (uintptr_t)CONFIG_RAM_END);

  /* Adjust that size to account for MPU alignment requirements.
   * NOTE that there is an implicit assumption that the CONFIG_RAM_END
   * is aligned to the MPU requirement.
   */

  log2  = (int)mpu_log2regionfloor(usize);
  DEBUGASSERT((CONFIG_RAM_END & ((1 << log2) - 1)) == 0);

  usize = (1 << log2);
  ubase = CONFIG_RAM_END - usize;

  /* Return the user-space heap settings */

  board_autoled_on(LED_HEAPALLOCATE);
  *heap_start = (FAR void *)ubase;
  *heap_size  = usize;

  /* Colorize the heap for debug */

  up_heap_color((FAR void *)ubase, usize);

  /* Allow user-mode access to the user heap memory */

  lpc43_mpu_uheap((uintptr_t)ubase, usize);

#else
  /* Return the heap settings */

  board_autoled_on(LED_HEAPALLOCATE);
  *heap_start = (FAR void *)g_idle_topstack;
  *heap_size  = CONFIG_RAM_END - g_idle_topstack;

  /* Colorize the heap for debug */

  up_heap_color(*heap_start, *heap_size);
#endif
}

void arm_addregion(void)
{
#ifdef MM_HAVE_REGION
  /* start from second region */

  g_mem_region_next = 2;

#ifdef MM_USE_LOCSRAM_BANK1
  /* Add the SRAM to the user heap */

  mem_addregion((FAR void *)LPC43_LOCSRAM_BANK1_BASE, LPC43_LOCSRAM_BANK1_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SRAM heap */

  lpc43_mpu_uheap((uintptr_t)LPC43_LOCSRAM_BANK1_BASE, LPC43_LOCSRAM_BANK1_SIZE);
#endif
#endif

#ifdef MM_USE_AHBSRAM_BANK0
  /* Add the SRAM to the user heap */

  mem_addregion((FAR void *)LPC43_AHBSRAM_BANK0_BASE, LPC43_AHBSRAM_BANK0_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SRAM heap */

  lpc43_mpu_uheap((uintptr_t)LPC43_AHBSRAM_BANK0_BASE, LPC43_AHBSRAM_BANK0_SIZE);
#endif
#endif

#ifdef MM_USE_AHBSRAM_BANK1
  /* Add the SRAM to the user heap */

  mem_addregion((FAR void *)LPC43_AHBSRAM_BANK1_BASE, LPC43_AHBSRAM_BANK1_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SRAM heap */

  lpc43_mpu_uheap((uintptr_t)LPC43_AHBSRAM_BANK1_BASE, LPC43_AHBSRAM_BANK1_SIZE);
#endif
#endif

#ifdef MM_USE_AHBSRAM_BANK2
  /* Add the SRAM heap to the user heap */

  mem_addregion((FAR void *)MM_DMAREGION_BASE, MM_DMAREGION_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SRAM heap */

  lpc43_mpu_uheap((uintptr_t)MM_DMAREGION_BASE, MM_DMAREGION_SIZE);
#endif
#endif

#ifdef MM_USE_EXTSDRAM0
  /* Add the SDRAM to the user heap */

  mem_addregion((FAR void *)MM_EXTSDRAM0_REGION, MM_EXTSDRAM0_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SDRAM heap */

  lpc43_mpu_uheap((uintptr_t)MM_EXTSDRAM0_REGION, MM_EXTSDRAM0_SIZE);
#endif
#endif

#ifdef MM_USE_EXTSDRAM1
  /* Add the SDRAM to the user heap */

  mem_addregion((FAR void *)MM_EXTSDRAM1_REGION, MM_EXTSDRAM1_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SDRAM heap */

  lpc43_mpu_uheap((uintptr_t)MM_EXTSDRAM1_REGION, MM_EXTSDRAM1_SIZE);
#endif
#endif

#ifdef MM_USE_EXTSDRAM2
  /* Add the SDRAM to the user heap */

  mem_addregion((FAR void *)MM_EXTSDRAM2_REGION, MM_EXTSDRAM2_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SDRAM heap */

  lpc43_mpu_uheap((uintptr_t)MM_EXTSDRAM2_REGION, MM_EXTSDRAM2_SIZE);
#endif
#endif

#ifdef MM_USE_EXTSDRAM3
  /* Add the SDRAM to the user heap */

  mem_addregion((FAR void *)MM_EXTSDRAM3_REGION, MM_EXTSDRAM3_SIZE);

#if defined(CONFIG_BUILD_PROTECTED) && defined(CONFIG_MM_KERNEL_HEAP)
  /* Allow user-mode access to the SDRAM heap */

  lpc43_mpu_uheap((uintptr_t)MM_EXTSDRAM3_REGION, MM_EXTSDRAM3_SIZE);
#endif
#endif
#endif /* MM_HAVE_REGION */
}
